--- a/friendbook-client/package.json
+++ b/friendbook-client/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "friendbook",
+  "name": "friendbook-client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start-dev":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^8.5.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "express": "^4.17.2"
   }
 }
